Feature: cbs load management optimization (ALFA-207)
Closes ALFA-207

Reviewed-by: Norbert Graczykowski <ngraczykowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/135